avoid unnecessary creation of integer objects